# bowerbird

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.md  llms.txt  pyproject.toml
.github/workflows/: account-dump.yml  ci.yml  compile.yml  kb-recap-feed.yml  pull.yml  recap.yml  search-dump.yml  slack-recap.yml
compile/: INSTRUCTIONS.md  PROMPT.md  recap-feed.json
compile/recaps/: default.md
config/: accounts.toml  recaps.toml  topics.toml
connectors/: README.md  TEMPLATE.md
connectors/slack/: README.md  manifest.json
docs/: compile-runners.md  how-it-works.md  importing-x.md  open-source.md  setup-prompt.md  setup.md  slack-recap.md  upgrading.md
docs/agent/: conventions.md  github-actions.md  overview.md  pipeline.md  provenance.md  repo-layout.md
recaps/ai-accounts-daily/: 2026-06-05.md
recaps/getting-started-daily/: 2026-06-05.md
recaps/manifests/: 2026-06-06.json
samples/: README.md  recap-feed.json  seed-accounts.sh
skill/bowerbird/: SKILL.md  (+1 more)
tests/: test_account_dump.py  test_accounts.py  test_books.py  test_config.py  test_demo_instance.py  test_docs.py  test_folders.py  test_health.py  test_linter.py  test_model_config.py  test_pull.py  test_raw_sources.py  test_raw_writer.py  test_recap_feed.py  test_recaps.py  test_repo_boundary.py  test_samples.py  test_search.py  test_search_dump.py  test_secrets_push.py  test_slack_delivery.py  test_source_repo_baseline.py  test_threads.py  test_tokens.py  test_wizard.py  test_x_client.py
web/: README.md  next.config.mjs  package-lock.json  package.json  vercel.json
wiki/: index.md
(+117 files in other folders)
