[project]
name = "bowerbird"
version = "0.1.0"
description = "Personal LLM-compiled knowledge base (Karpathy-style markdown wiki) fed by X bookmarks."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
bowerbird = "bowerbird.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
